tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Bitmap-b-zier-curves-cubic' based on the file name 'bitmap-b-zier-curves-cubic.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(53,30): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(54,30): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(56,34): error FS0001: This expression was expected to have type
    obj    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(65,30): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(66,30): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-b-zier-curves-cubic.fs(71,38): error FS0001: This expression was expected to have type
    obj    
but here has type
    Map<'a,'b>    
